--- a/Guided Access/index.html
+++ b/Guided Access/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Guided Access</title>
+  <title>Progress Steps</title>
 </head>
 
 <body>
@@ -18,7 +17,8 @@
       <div class="circle">3</div>
       <div class="circle">4</div>
     </div>
-    <button class="btn" id="prev" disabled>Previous</button>
+
+    <button class="btn" id="prev" disabled>Prev</button>
     <button class="btn" id="next">Next</button>
   </div>
   <script src="script.js"></script>
