--- a/Guided Access/index.html
+++ b/Guided Access/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Progress Steps</title>
+  <title>Guided Stepss</title>
 </head>
 
 <body>
@@ -20,7 +20,6 @@
       <div class="circle">6</div>
       <div class="circle">7</div>
     </div>
-
     <button class="btn" id="prev" disabled>Prev</button>
     <button class="btn" id="next">Next</button>
   </div>
